--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div>
+
         <h1>Lista della spesa</h1>
 
-        <ul>
-            
+        <ul id="lista">
+
         </ul>
 
 
